Fixed Table Sizing & Overflow Responsiveness

--- a/styles/main.css
+++ b/styles/main.css
@@ -81,27 +81,28 @@ main iframe {
 
 .table {
     margin: 0 auto;
-    overflow-x: scroll;
+    overflow-x: auto;
     max-width: 100%;
+    width: 100%;
 }
 
 .tabletitle,
 .tableitems {
     display: flex;
     flex-direction: row;
-    max-width: 100%;
+    flex-wrap: nowrap;
 }
 
 .tabletitle p,
 .tableitems p {
-    width: 100%;
-    min-width: 150px;
+    flex: 1 0 150px;
     padding: 1em 0.5em;
     border: solid 2px white;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .tabletitle p {
@@ -302,8 +303,9 @@ li .copytext {
 
     .tabletitle p,
     .tableitems p {
-        width: 100%;
-        min-width: 100px;
+        flex: 1 0 100px;
+        font-size: 0.8em;
+        padding: 0.5em 0.3em;
     }
 }
 
@@ -311,9 +313,9 @@ li .copytext {
 
     .tabletitle p,
     .tableitems p {
-        width: 100%;
-        min-width: 70px;
-        font-size: 0.5;
+        flex: 1 0 70px;
+        font-size: 0.7em;
+        padding: 0.3em 0.2em;
     }
 }
 
@@ -321,8 +323,9 @@ li .copytext {
 
     .tabletitle p,
     .tableitems p {
-        width: 100%;
-        min-width: 50px;
-        font-size: 0.5;
+        flex: 1 0 40px;
+        font-size: 0.5em;
+        padding: 0.5em 0.1em;
+
     }
 }
