--- a/styles/master.css
+++ b/styles/master.css
@@ -143,6 +143,7 @@ nav h4 {
 
 nav li {
     margin: 1em 0;
+    word-wrap: break-word;
 }
 
 nav .media {
@@ -270,5 +271,12 @@ footer img {
 
     nav {
         max-width: 30%;
+    }
+
+    nav .media {
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5em;
+        padding-bottom: 1em;
     }
 }
